chore: resolve layout shift on modal open

--- a/src/app.css
+++ b/src/app.css
@@ -37,10 +37,6 @@ h1,h2,h3,h4,h5,h6,p {
     line-height: 1.4;
 }
 
-body {
-    padding: 32px 0px;
-}
-
 a {
     color: #ffffff;
 }
@@ -49,8 +45,12 @@ a {
     display: flex;
     align-items: center;
     flex-direction: column;
-
+    
     gap: 32px;
+    
+    padding: 32px 0px;
+}
 
+body, #app {
     min-height: calc(100dvh - 64px);
 }
