--- a/src/components/Modal.module.css
+++ b/src/components/Modal.module.css
@@ -15,7 +15,7 @@
   align-items: flex-start;
   gap: 16px;
 
-  max-width: calc(100% - 32px);
+  max-width: calc(100% - 64px);
   width: 400px;
 
   background: #c6c6c6;
